syntax = "proto2";
package bnet.protocol.connection;

// Proto extractor compiled unit - https://github.com/HearthSim/proto-extractor

import "bnet/protocol/protocol.proto";

// ref: bnet.protocol.connection.BindRequest
message BindRequest {
	repeated fixed32 imported_service_hash = 1 [packed=true];
	repeated BoundService exported_service = 2;
}

// ref: bnet.protocol.connection.BindResponse
message BindResponse {
	repeated uint32 imported_service_id = 1 [packed=true];
}

// ref: bnet.protocol.connection.BoundService
message BoundService {
	optional fixed32 hash = 1;
	optional uint32 id = 2;
}

// ref: bnet.protocol.connection.ConnectionMeteringContentHandles
message ConnectionMeteringContentHandles {
	repeated bnet.protocol.ContentHandle content_handle = 1;
}

// ref: bnet.protocol.connection.ConnectRequest
message ConnectRequest {
	optional bnet.protocol.ProcessId client_id = 1;
	optional BindRequest bind_request = 2;
}

// ref: bnet.protocol.connection.ConnectResponse
message ConnectResponse {
	optional bnet.protocol.ProcessId server_id = 1;
	optional bnet.protocol.ProcessId client_id = 2;
	optional uint32 bind_result = 3;
	optional BindResponse bind_response = 4;
	optional ConnectionMeteringContentHandles content_handle_array = 5;
	optional uint64 server_time = 6;
}

// ref: bnet.protocol.connection.DisconnectNotification
message DisconnectNotification {
	optional uint32 error_code = 1;
	optional string reason = 2;
}

// ref: bnet.protocol.connection.DisconnectRequest
message DisconnectRequest {
	optional uint32 error_code = 1;
}

// ref: bnet.protocol.connection.EchoRequest
message EchoRequest {
	optional fixed64 time = 1;
	optional bool network_only = 2;
	optional bytes payload = 3;
}

// ref: bnet.protocol.connection.EchoResponse
message EchoResponse {
	optional fixed64 time = 1;
	optional bytes payload = 2;
}

// ref: bnet.protocol.connection.EncryptRequest
message EncryptRequest {
}

